<resources>
    <string name="app_name">Tinder</string>
    <string name="year">year</string>
    <string name="close">Close</string>
    <string name="rate">Rate app</string>
    <string name="dialog_title">Alert :</string>
    <string name="dialog_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu erat tincidunt lacus fermentum rutrum.</string>
    <string name="admob_banner_ad_id" />
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="agree_n_continue">Tap \"Agree and continue\" to accept the Ping Me Terms of Service and Privacy Policy.</string>
    <string name="url_terms">https://chatterboxappharish.blogspot.com/2018/11/terms-and-conditions.html</string>

    <string name="url_privacy">https://chatterboxappharish.blogspot.com/2018/06/privacy-policy.html</string>
    <string name="messages_header">Account Settings</string>
    <string name="discover_header">Discovery</string>
    <string name="legal_header">LEGAL</string>
    <string name="logout">Logout</string>
    <string name="share_tinder">Share Tinder</string>
    <string name="delete_account">Delete Account</string>


    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>

    <!-- Preference Titles -->
    <string name="about_me_title">About me</string>
    <string name="reply_title">Default reply action</string>
    <!-- Discover Preferences -->
    <string name="show_people_title">Only show people in this range</string>

    <!-- Messages Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>

    <!-- legal Preferences -->
    <string name="licenses_title">Licenses</string>
    <string name="terms_of_service_title">Terms of Service</string>

    <!-- Sync Preferences -->
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="default_input_hint">Type your message</string>
    <string name="default_status">Hi there I am using Ping Me</string>
    <string-array name="text_array">
        <item>Hellow dear Im here</item>
        <item>I won to chat now </item>
        <item>Hellow dear Im here</item>
        <item>Hellow dear Im here</item>
        <item>Hellow dear Im here</item>
        <item>Hellow dear Im here</item>
        <item>Hellow dear Im here</item>
        <item>Hellow dear Im here</item>
    </string-array>
    <string-array name="full_names">
        <item>emma waston</item>
        <item>nadia</item>
        <item>sara</item>
        <item>hoda</item>
        <item>karima</item>
        <item>jesica</item>
        <item>johana</item>
        <item>katrena</item>
    </string-array>
    <string name="app">Language</string>
    <string name="msg_token_fmt">firebase message token</string>
    <string name="title_topic_course">Design Thinking</string>
    <string name="number_courses">14 courses</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading…</string>
    <string name="ACCOUNT_CREATED_SUCCESSFULLY">Account Created successfully</string>
    <string name="ACCOUNT_CREATION_UNSUCCESSFULL">Account creation unsuccessful!</string>
    <string name="date_pattern">dd/MM/yyyy</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="enter_school_name">Enter school name</string>
    <string name="name_cannot_contain_numbers">Name cannot contain numbers</string>
    <string name="email_cannot_contain_capital_letters">Email cannot contain capital letters</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="gender_not_selected">Gender not selected</string>
    <string name="orientation_not_selected">Orientation not selected</string>
    <string name="interest_not_selected">Interested in not selected</string>
    <string name="interests_not_selected">Please select 5 things you are interested in</string>
    <string name="enter_dob">Enter DOB</string>
    <string name="error_parsing_dob">Error while parsing DOB</string>
    <string name="enter_password">Enter password</string>
    <string name="passwords_not_match">Passwords do not match</string>
    <string name="enter_username_and_password">Please enter username and password</string>
    <string name="incorrect_username_or_password">Incorrect username or password</string>
    <string name="fcm_token_fetch_failed">Fetching FCM registration token failed</string>
    <string name="new_connection">New Connection</string>
    <string name="title_location_permission">Location permission</string>
    <string name="text_location_permission">Allow location access</string>
    <string name="ok">OK</string>
</resources>
