<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="Email"
            app:title="Email"
            app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
            app:key="Date of Birth"
            app:title="Date of Birth"
            app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
            app:key="Password"
            app:title="password"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/legal_header">

        <EditTextPreference
            app:key="license"
            app:title="@string/licenses_title" />

        <EditTextPreference
            app:key="terms_of_service"
            app:title="@string/terms_of_service_title" />

    </PreferenceCategory>

    <EditTextPreference
        app:key="share"
        app:title="@string/share_tinder" />

    <EditTextPreference
        app:key="logout"
        app:title="@string/logout" />

    <EditTextPreference
        app:key="delete_account"
        app:title="@string/delete_account" />


</PreferenceScreen>